# wit

./: Cargo.toml  README.md
cloud/: Cargo.toml
cloud/common/: Cargo.toml  build.rs
cloud/common/proto/: control.proto
cloud/common/src/: lib.rs  prelude.rs
cloud/common/src/proto/: wit.control.rs
cloud/controller/: Cargo.toml
cloud/controller/src/: lib.rs
cloud/gateway/: Cargo.toml
cloud/gateway/src/: lib.rs
cloud/router/: Cargo.toml
cloud/router/src/: lib.rs
cloud/src/: main.rs
cloud/worker/: Cargo.toml
cloud/worker/executor/: Cargo.toml
cloud/worker/executor/src/: lib.rs
cloud/worker/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  prelude.rs
controller/: Cargo.toml
controller/src/: lib.rs
examples/capitalize/: Cargo.toml
examples/capitalize/src/: lib.rs
fun/: Cargo.toml
fun/codegen/: Cargo.toml
fun/runtime/: Cargo.toml
gateway/src/: lib.rs
scripts/: build-capitalize.sh  event.sh  run-cloud.sh  upload-capitalize.sh
src/: main.rs
worker/: Cargo.toml
worker/codegen/: Cargo.toml
worker/executor/: Cargo.toml
worker/runtime/: Cargo.toml
