[package]
name = "runtime"
version = "0.0.2"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/ipcs"
description = "Runtime shim for IPCS functions written in rust"
license = "MIT"
edition = "2018"


[dependencies.codegen]
version = "0.0.2"
path = "../codegen"

[dependencies]
